--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Shanmugam Ekambaram
-twitter_username: shanspaniard
-name: Shanmugam Ekambaram
+title: Sushil Sekhar
+twitter_username: gg.visor
+name: Sushil Sekhar
 
 # Build settings
 markdown: kramdown
